--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Free HTML CSS Template
                     </ul>
                 </div>
             </div>
-            <div class="stat-card">
+            <div class="stat-card stat-card-center">
                 <div class="stat-number">MORE</div>
                 <div class="stat-label">
                     <ul>
@@ -255,15 +255,15 @@ Free HTML CSS Template
 
     <section id="contact" class="fade-in">
         <h2 class="section-title">CONTACT</h2>
-        <form class="contact-form glass-card">
+        <form class="contact-form glass-card" id="contactForm">
             <div class="form-group">
-                <input type="text" placeholder="Your Name" required>
+                <input type="text" id="contactName" placeholder="Your Name" required>
             </div>
             <div class="form-group">
-                <input type="email" placeholder="Your Email" required>
+                <input type="email" id="contactEmail" placeholder="Your Email" required>
             </div>
             <div class="form-group">
-                <textarea rows="5" placeholder="Your Message" required></textarea>
+                <textarea id="contactMessage" rows="5" placeholder="Your Message" required></textarea>
             </div>
             <button type="submit" class="neural-btn">SEND MESSAGE</button>
         </form>
@@ -298,7 +298,7 @@ Free HTML CSS Template
                     Let's build something amazing together
                 </p>
                 <div class="social-links">
-                    <a href="#" aria-label="GitHub">
+                    <a href="https://github.com/aidilzz" target="_blank" aria-label="GitHub">
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                             <path
                                 d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12" />
@@ -321,8 +321,7 @@ Free HTML CSS Template
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2048 Neural Network Portfolio. All rights reserved. Provided by <a href="https://www.tooplate.com"
-                    rel="nofollow noopener">Tooplate</a></p>
+            <p>&copy; 2025 Ahmad Aidil Azazi</p>
         </div>
     </footer>
     <script src="tooplate-neural-scripts.js"></script>
