--- a/index.html
+++ b/index.html
@@ -99,18 +99,13 @@ Free HTML CSS Template
             <div class="about-content">
                 <h3>HALO, SAYA AHMAD AIDIL AZAZI</h3>
                 <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 20px;">
-                    Saya seorang pelajar SMK yang mendalami pemrograman web sekaligus jaringan komputer. Selain
-                    membangun website modern dengan desain responsif, saya juga mempelajari konfigurasi jaringan seperti
-                    MikroTik, Linux, dan virtualisasi.
+                    siswa kelas 11 jurusan Teknik Komputer dan Jaringan. Saya mendalami dunia jaringan, web development, dan cyber security, dengan fokus utama pada MikroTik. Saya menikmati proses belajar memahami bagaimana jaringan bekerja, bagaimana sebuah sistem bisa terhubung dengan aman, serta bagaimana membuat website yang rapi dan responsif.
                 </p>
                 <p style="font-size: 1.1rem; line-height: 1.8; color: var(--text-secondary); margin-bottom: 20px;">
-                    Dengan menggabungkan dua bidang ini, saya ingin menguasai keterampilan praktis yang bisa diterapkan
-                    langsung di dunia kerja. Tujuan saya adalah menjadi profesional IT yang mampu membangun solusi
-                    digital sekaligus memahami dasar infrastruktur jaringan yang mendukungnya.
+                    Saya terus mengembangkan keterampilan teknis dengan belajar konfigurasi router, manajemen jaringan, dan teknologi pendukung lainnya. Bagi saya, teknologi adalah bidang yang penuh tantangan sekaligus peluang, dan setiap hari selalu ada hal baru yang bisa dipelajari. Semakin saya belajar, semakin saya yakin bahwa dunia IT adalah jalur yang tepat untuk saya.
                 </p>
                 <p style="font-size: 1.1rem; line-height: 1.8;">
-                    Ke depannya, saya punya rencana untuk bekerja terlebih dahulu setelah lulus SMK, sambil terus belajar dan menambah pengalaman. Setelah itu, saya ingin melanjutkan kuliah, dengan target utama di ITS atau UNAIR.
-                </p>
+                    Ke depan, saya berencana langsung bekerja di bidang IT, untuk mendapatkan pengalaman nyata sebelum melanjutkan kuliah ke ITS atau UNAIR. Tujuan jangka panjang saya adalah menjadi seorang Network Engineer yang memahami infrastruktur jaringan secara mendalam dan mampu membangun solusi yang handal.                </p>
             </div>
         </div>
         <div class="about-stats">
@@ -255,15 +250,15 @@ Free HTML CSS Template
 
     <section id="contact" class="fade-in">
         <h2 class="section-title">CONTACT</h2>
-        <form class="contact-form glass-card" id="contactForm">
+        <form class="contact-form glass-card">
             <div class="form-group">
-                <input type="text" id="contactName" placeholder="Your Name" required>
+                <input type="text" placeholder="Your Name" required>
             </div>
             <div class="form-group">
-                <input type="email" id="contactEmail" placeholder="Your Email" required>
+                <input type="email" placeholder="Your Email" required>
             </div>
             <div class="form-group">
-                <textarea id="contactMessage" rows="5" placeholder="Your Message" required></textarea>
+                <textarea rows="5" placeholder="Your Message" required></textarea>
             </div>
             <button type="submit" class="neural-btn">SEND MESSAGE</button>
         </form>
