--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@ Free HTML CSS Template
                 <div class="stat-label">
                     <ul>
                         <li>IMPIAN: MENJUARAI OLIMPIADE JARINGAN MIKROTIK</li>
-                        <li>CITA-CITA: PROGRAMMER</li>
+                        <li>CITA-CITA: NETWORK ENGINEER</li>
                         <li>CLUB FAVORIT: MANCHESTER UNITED</li>
                         <li>PANUTAN: DEA AFRIZAL</li>
                     </ul>
                 </div>
             </div>
-                </div>
+            </div>
     </section>
 
     <!-- <section id="projects" class="fade-in">
